# Futoshiki_VifeAgent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: architecture.md  astar_search.md  backward_chaining.md  backward_chaining.tex  brute_force.tex  dev_rules.md  experimental_setup.tex  forward_chaining.md  futoshiki.md  generator_validator.tex  heuristic_testing.md  memory_usage_analysis.tex  system_design.tex  system_design_barebone.tex  ui_system.tex
resource/latex/: a_search_h1_empty_cells.tex  a_search_h2_domain_sum.tex  a_search_h3_min_conflicts.tex  a_search_h4_ac_3_pruned_domain_sum.tex  backtracking_forward_chaining.tex  backward_chaining_generate_and_test_sld.tex  bruteforce.tex  forward_chaining_data_driven_fix_point.tex
resource/output/: backtracking_forward_chaining.csv  backward_chaining_generate_and_test_sld.csv  forward_chaining_data_driven_fix_point.csv
src/app/: game_application.py  input_handler.py  solve_worker.py  solver_registry.py
src/benchmark/: __init__.py  __main__.py  benchmark.py  generated.md  generator.py  validator.py  visualize.py
src/constraints/: __init__.py  ac3.py  (+4 more)
test/: __init__.py  test_ac3_heuristic.py  test_astar.py  test_backtracking_forward_chaining.py  test_backward_chaining.py  test_benchmark_runner.py  test_benchmark_validator.py  test_brute_force.py  test_forward_chaining.py  test_forward_then_ac3_backward_chaining.py  test_forward_then_backward_chaining.py  test_heuristics.py  test_horn_kb.py  test_integration_parser_puzzle_kb.py  test_solve_runner.py  test_stats_csv.py  test_task1.py  test_task2.py
(+111 files in other folders)
