[project]
name = "futoshiki-vifeagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.14, >= 3.13"
dependencies = [
    "numpy>=1.12.1",
    "pygame>=2.0.1",
    "z3-solver>=4.12.4.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.0",
]

[project.scripts]
futoshiki = "futoshiki_vifeagent.__main__:main"
futoshiki-solver = "futoshiki_vifeagent.solver.__main__:main"
futoshiki-ui = "futoshiki_vifeagent.ui.__main__:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
